// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test en GifReactApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Batman"
      key="Batman"
    />
  </ol>
</Fragment>
`;

exports[`Test en GifReactApp Debe generarse correctamente 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
